# analogue_clock

./: CMakeLists.txt  README.md
docs/: Instructions.odt
include/: analogue_clock.h  color.h  property_clock.h  sdl_window.h  shape.h  system_time.h
include/glad/: glad.h
src/: analogue_clock.cpp  glad.cpp  main.cpp  sdl_window.cpp  shape.cpp  system_time.cpp
